--- a/index.html
+++ b/index.html
@@ -57,6 +57,43 @@
                 </div>
             </div>
         </div>
+        <!-- fila2 -->
+        <div class="row border d-flex justify-content-center my-5">
+            <div class="col-12 col-md-6 my-5">
+                <h1 class="fw-bold m-3 text-center">Features</h1>
+                <p class="m-3 text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio quo officia sapiente totam mollitia sint rem repellat maiores laudantium. Assumenda temporibus provident corrupti? Fuga atque ea recusandae!</p>
+                <div class="container">
+                    <ul class="nav justify-content-center my-5">
+                        <li class="nav-item">
+                          <a class="minav-link nav-link fw-bold" aria-current="page" href="#">Simple Bookmarking</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="minav-link nav-link fw-bold" href="#">Speedy Searching</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="minav-link nav-link fw-bold" href="#">Easy Sharing</a>
+                        </li>
+                      </ul>
+                </div> 
+            </div>
+        </div>
+        <!-- fila3 -->
+        <div class="row my-5 border">
+            <!-- columna der-->
+            <div class="col-12 col-lg-6">
+                <div class="bg-primary rounded-pill mt-5">
+                    <img class="w-100" src="images/illustration-hero.svg" alt="...">
+                </div>
+            </div>
+            <!-- columna izq -->
+            <div class="col-12 col-lg-6 p-5">
+                <div class="container display-items-center justify-content-center mt-5">
+                    <h1 class="fw-bold">A Simple Bookmark Manager</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad cupiditate veritatis ex repellat expedita reprehenderit est a minus deleniti. Lorem, ipsum!</p>
+                    <button type="button" class="btn btn-primary">More info</button>
+                </div>
+            </div>
+        </div>
      </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
