--- a/index.html
+++ b/index.html
@@ -94,6 +94,48 @@
                 </div>
             </div>
         </div>
+         <!-- fila4 -->
+         <div class="row my-5 border">
+            <div class="col-12 mt-5">
+                <h1 class="fw-bold text-center">Download the extension</h1>
+                <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Odio quo officia sapiente totam mollitia sint repellat!</p>
+            </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4 mb-5 mt-3 justify-content-center">
+                <div class="col mt-0"  style="width: 18rem;">
+                    <div class="card shadow">
+                    <img src="images/logo-chrome.svg" class="card-img-top w-25 d-block mx-auto m-3" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-center fw-bold">Card title</h5>
+                        <p class="card-text text-center">This is a longer card.</p>
+                        <img src="images/bg-dots.svg" class="card-img-top" alt="...">
+                        <a href="#" class="btn btn-primary d-block mx-auto m-3">Add & install extension</a>
+                    </div>
+                    </div>
+                </div>
+                <div class="col mt-3"  style="width: 18rem;">
+                    <div class="card shadow">
+                    <img src="images/logo-firefox.svg" class="card-img-top w-25 d-block mx-auto m-3" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-center fw-bold">Card title</h5>
+                        <p class="card-text text-center">This is a longer card.</p>
+                        <img src="images/bg-dots.svg" class="card-img-top" alt="...">
+                        <a href="#" class="btn btn-primary d-block mx-auto m-3">Add & install extension</a>
+                    </div>
+                    </div>
+                </div>
+                <div class="col mt-5"  style="width: 18rem;">
+                    <div class="card shadow">
+                    <img src="images/logo-opera.svg" class="card-img-top w-25 d-block mx-auto m-3" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-center fw-bold ">Card title</h5>
+                        <p class="card-text text-center">This is a longer card.</p>
+                        <img src="images/bg-dots.svg" class="card-img-top" alt="...">
+                        <a href="#" class="btn btn-primary d-block mx-auto m-3">Add & install extension</a>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
      </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
