--- a/index.html
+++ b/index.html
@@ -196,7 +196,58 @@
                 </div>
             </div>
         </div>
+        <!--fila6-->
+        <div class="row mt-5">
+            <div class="col-12 bg-primary p-5">
+                <h6 class="m-2 text-center">A Simple Bookmark Manager</h6>
+                <h1 class="m-2 fw-bold text-center">Lorem, ipsum dolor sit amet <br> consectetur.</h1>
+                <div>
+                    <form class="row g-3 m-2 container justify-content-center">
+                        <div class="col-auto">
+                        <label for="staticEmail2" class="visually-hidden">Email</label>
+                        <input type="text" class="form-control" id="staticEmail2" placeholder="Enter your email address">
+                        </div>
+                        <div class="col-auto">
+                        <button type="submit" class="btn btn-secondary mb-3">Contact us</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
      </main>
+     <!--footer-->
+    <footer class="container">
+        <div class="row">
+            <div class="col-12 bg-dark">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <div class="container-fluid">
+                        <img class="navbar-brand" src="images/logo-bookmark.svg" href="#">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link m-3 fw-bold text-muted" aria-current="page" href="#">FEATURES</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link m-3 fw-bold text-muted" href="#">PRICING</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link m-3 fw-bold text-muted" href="#" tabindex="-1" aria-disabled="true">CONTACT</a>
+                            </li>
+                            </ul>
+                            <form class="m-3">
+                            <button class="btn bg-secondary" type="submit">LOGIN</button>
+                            </form>
+                            <img src="images/facebook.svg" class="m-3" alt="Logo">
+                            <img src="images/twitter.svg" class="m-3" alt="Logo">
+                        </div>
+                    </div>
+                  </nav>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
